# stan

./: .dockerignore  .env.example  .gitignore  Caddyfile  PLAN.md  README.md  REPORT.md  SOUL.md  build.sh  composer.json  package-lock.json  package.json  static-build.Dockerfile  tsconfig.json
.github/workflows/: build.yml  desktop.yml
app/Agents/: ChannelAgent.php  ObjectiveAgent.php  PlannerAgent.php  SessionAgent.php  StanAgent.php  SwarmCoordinatorAgent.php  SwarmWorkerAgent.php
app/Enums/: ChannelType.php  ObjectiveStatus.php  PermissionLevel.php  StepStatus.php  SwarmTaskStatus.php  ToolCategory.php  ToolRiskLevel.php
app/Events/: ObjectiveCompleted.php  ObjectiveStarted.php  PermissionRequested.php  SessionMessageReceived.php  StepExecuted.php
app/Jobs/: ProcessSessionMessage.php  RunObjective.php  RunSwarmObjective.php  RunSwarmTask.php
app/Models/: Channel.php  CodingSession.php  LlmProviderConfig.php  McpServerConfig.php  Objective.php  ObjectiveStep.php  Plugin.php  SessionMessage.php  Setting.php  SwarmTask.php  ToolExecution.php  ToolPermission.php  User.php
app/Providers/: AppServiceProvider.php
config/: stan.php
database/migrations/: 2024_01_01_000010_create_objectives_table.php  2024_01_01_000011_create_objective_steps_table.php  2024_01_01_000012_create_coding_sessions_table.php  (+10 more)
desktop/: package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: auth.rs  main.rs  sidecar.rs  tray.rs
public/: frankenphp-worker.php
routes/: api.php
(+108 files in other folders)
